# Agentic_Chatbot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py
app/agent/: __init__.py  graph.py  state.py  tools.py
app/api/: __init__.py  routes.py
app/schemas/: __init__.py  auth.py  chat.py  document.py
app/services/: __init__.py  auth.py  embedding.py  ingestion.py  memory.py  retrieval.py
frontend/src/: App.jsx  index.css
