[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=7.4.3",
    "cohere>=7.0.4",
    "fastapi>=0.138.1",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "motor>=3.6.0",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.14.2",
    "pymongo>=4.10.1",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]
